# cinfra

./: .gitignore  README.md  pyproject.toml
cinfra/: app.py
cinfra/core/: logging.py
cinfra/crawler/: crawl.py  setup.py
tests/: test_crawl.py  test_setup.py
