[project]
name = "cinfra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.60.0",
    "tldextract>=5.3.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]

[tool.pyright]
venv = ".venv"
venvPath = "."

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["."]

[tool.ruff]
line-length = 88
exclude = [
  ".venv",
  "__pycache__",
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]
ignore = []

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
line-ending = "auto"
